apps/base/glance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance
  namespace: glance
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: error-pages-error-pages@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dashboard.bacherik.de
    secretName: dashboard-tls
  rules:
  - host: "dashboard.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: glance
            port:
              number: 80
